--- a/package.json
+++ b/package.json
@@ -2,10 +2,13 @@
   "name": "web-guided-project-advanced-forms",
   "version": "0.0.1",
   "scripts": {
-    "start": "parcel src/index.html"
+    "start": "parcel src/index.html",
+   
+    "test": "cypress open"
   },
   "license": "ISC",
   "devDependencies": {
+    "cypress": "^12.17.1",
     "eslint": "^8.10.0",
     "eslint-plugin-react": "^7.29.2",
     "less": "^4.1.2",
